Some Updates to Css

--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
     <div id="about-us" class="container-fluid one-page-section">
     </div>
     <div id="prizes" class="container-fluid one-page-section">
+        <h1>Prizes</h1>
         <section class="cards-main-cont">
             <div class="card-cont">
                 <div class="card-main">
@@ -163,32 +164,9 @@
                     </ul>
                 </div>
             </div>
-            <div class="card-cont">
-                <div class="card-main">
-                    <div class="content">
-                        <div class="imgBx">
-                            <img src="https://image.flaticon.com/icons/png/256/4213/4213732.png">
-                        </div>
-                        <div class="contentBx">
-                            <h3>Lion<br><span>Happy Birthday</span></h3>
-                        </div>
-                    </div>
-                    <ul class="sci">
-                        <li>
-                            <a href="">happy</a>
-                        </li>
-                        <li>
-                            <a href="">birth</a>
-                        </li>
-                        <li>
-                            <a href="">day</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
         </section>
         <section class="timeline-main" id="schedule">
-            <h1>Schedule</h1>
+            <h1>Timeline Of Events</h1>
             <div class="date-links">
                 <button id="day1" class="active">23<sup>th</sup>April</button>
                 <button id="day2">24<sup>th</sup>April</button>
