-Fixed Bug of CSS not Loading

--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.min.css">
-    <link rel="stylesheet" href="/styles/sponsors.css">
-    <link rel="stylesheet" href="/styles/timeline.css">
-    <link rel="stylesheet" href="/styles/prizes.css">
-    <link rel="stylesheet" href="/styles/faq.css">
-    <link rel="stylesheet" href="/styles/about.css">
+    <link rel="stylesheet" href="styles/sponsors.css">
+    <link rel="stylesheet" href="styles/timeline.css">
+    <link rel="stylesheet" href="styles/prizes.css">
+    <link rel="stylesheet" href="styles/faq.css">
+    <link rel="stylesheet" href="styles/about.css">
     <link rel="stylesheet" href="plugins/flipdown-master/dist/flipdown.min.css">
     <script src="plugins/flipdown-master/dist/flipdown.min.js"></script>
 
@@ -66,16 +66,19 @@
                     <a href="#hero">Home</a>
                 </li>
                 <li>
-                    <a href="#about-us">About Us</a>
+                    <a href="#about-us">About</a>
+                </li>
+                <li>
+                    <a href="#schedule">Timeline</a>
+                </li>
+                <li>
+                    <a href="#faq">FAQ</a>
                 </li>
                 <li>
                     <a href="#sponsors">Sponsor</a>
                 </li>
                 <li>
                     <a href="#footer">Contact Us</a>
-                </li>
-                <li>
-                    <a href="faq.html">FAQ</a>
                 </li>
 
             </ul>
@@ -88,21 +91,17 @@
             <div class="head-wrapper">
                 <p class="head">Computer Society Of India<span><br/>Presents</span></p>
             </div>
-            <img class="logo-hero mx-auto my-3" src="images/logo.svg" alt="HackNUThon" />
+            <img class="logo-hero mx-auto my-3" src="/images/logo.png" alt="HackNUThon" />
             <div class="head-wrapper">
                 <p class="head15">CSE Department, Nirma University</p>
             </div>
             <p class="head15">23 - 24 April @Online</p>
-            <button class="hero-btn my-3">
+            <button class="hero-btn my-4">
                 <a href="devfolio.co">
                     <img src="images/devfolio.svg" alt="devfolio"> Apply Now!
                 </a>
               </button>
-            <!-- <button class="hero-btn my-3">
-                <a href="details.html">
-                Details
-            </a>
-        </button> -->
+
             <button class="hero-btn my-3">
                     <a href="https://discord.gg/zYPsZntE">
                     Link to the Discord server!
@@ -120,7 +119,7 @@
     </div>
 
 
-    <div id="about-us" class="container-fluid one-page-section my-5">
+    <div id="about-us" class="container-fluid one-page-section mb-5">
         <div class="about-container w-100 mx-5">
             <div id="carouselExampleControls" class="carousel mx-0 w-25" data-ride="carousel">
                 <div class="carousel-inner">
@@ -392,7 +391,7 @@
         <div class="title-sponsors">
             <a href="https://www.hackerearth.com/">
                 <div class="sponsor-row">
-                    <img class="logo_alignment" src="/images/hackerearth.svg">
+                    <img class="logo_alignment" src="images/hackerearth.svg">
                     <h5 class="logo_content">Remotely hiring the best tech talent</h5>
                 </div>
             </a>
@@ -453,14 +452,6 @@
     </div>
     </div>
     </div>
-    <div class="map" style="width:100%;border:0; display: flex; flex-direction: column; align-items: center;justify-content: center;">
-        <h3 class="head15">Locate Us:
-        </h3>
-
-
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3669.144684114672!2d72.54266211480288!3d23.128386184899565!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x395e832f45125167%3A0x876cb1cb23c25bdb!2sNirma%20University!5e0!3m2!1sen!2sin!4v1582997324582!5m2!1sen!2sin"
-            width="800" height="300" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-    </div>
 
     <div id="loadFooter">
         <div id="footer" class="container-fluid pt-md-4 px-md-2 pt-5 one-page-section">
@@ -473,41 +464,41 @@
                     <h2>CONTACT US</h2>
                     <p>
                         <div>
-                            Pratik Thakkar <br/>
+                            Mukund Agarwal <br/>
                             <i class="fas fa-phone-alt"></i>
-                            <a href="tel:+919924255518">
-                      +919924255518
+                            <a href="tel:+919106718032">
+                      +919106718032
                     </a>
                             <br/>
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:19BCE279@nirmauni.ac.in">
-                    19BCE279@nirmauni.ac.in
+                            <a href="mailto:20BCE1679@nirmauni.ac.in">
+                                20BCE1679@nirmauni.ac.in
                     </a>
                         </div>
                         <br/>
                         <div>
-                            Utsav Thakkar <br/>
+                            Vatsal Rabadia<br/>
                             <i class="fas fa-phone-alt"></i>
-                            <a href="tel:+919157970056">
-                      +919157970056
+                            <a href="tel:+918141586514">
+                      +918141586514
                     </a>
                             <br/>
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:19BCE281@nirmauni.ac.in">
-                    19BCE281@nirmauni.ac.in
+                            <a href="mailto:20BIC052@nirmauni.ac.in">
+                                20BIC052@nirmauni.ac.in
                     </a>
                         </div>
                         <br>
                         <div>
-                            Tanisha Mittal <br/>
+                            Arunima Barik <br/>
                             <i class="fas fa-phone-alt"></i>
-                            <a href="tel:+918511784427">
-                      +918511784427
+                            <a href="tel:+919558818536">
+                      +919558818536
                     </a>
                             <br/>
                             <i class="fas fa-envelope"></i>
-                            <a href="mailto:19BEC132@nirmauni.ac.in">
-                    19BEC132@nirmauni.ac.in
+                            <a href="mailto:20BCE016@nirmauni.ac.in">
+                    20BCE016@nirmauni.ac.in
                     </a>
                         </div>
                     </p>
