--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HACKANUTHON'22</title>
     <link rel="shortcut icon" href="images/favicon.png" type="image/x-icon">
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="styles/style.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
@@ -91,7 +91,7 @@
             <div class="head-wrapper">
                 <p class="head">Computer Society Of India<span><br/>Presents</span></p>
             </div>
-            <img class="logo-hero mx-auto my-3" src="/images/logo.png" alt="HackNUThon" />
+            <img class="logo-hero mx-auto my-3" src="images/logo.png" alt="HackNUThon" />
             <div class="head-wrapper">
                 <p class="head15">CSE Department, Nirma University</p>
             </div>
@@ -396,7 +396,7 @@
                 </div>
             </a>
             <div class="sponsor-row">
-                <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="/images/hackerearth.svg"></a>
+                <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="images/hackerearth.svg"></a>
                 <h5 class="logo_content">Remotely hiring the best tech talent</h5>
             </div>
         </div>
@@ -405,27 +405,27 @@
             <h1 class="underline" style="text-align:center;">Platinum Sponsors</h1>
             <div class="plat-sponsors">
                 <div class="sponsor-row">
-                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="/images/hackerearth.svg"></a>
+                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="images/hackerearth.svg"></a>
                     <h5 class="logo_content">Remotely hiring the best tech talent</h5>
                 </div>
                 <div class="sponsor-row">
-                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="/images/hackerearth.svg"></a>
+                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="images/hackerearth.svg"></a>
                     <h5 class="logo_content">Remotely hiring the best tech talent</h5>
                 </div>
                 <div class="sponsor-row">
-                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="/images/hackerearth.svg"></a>
+                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="images/hackerearth.svg"></a>
                     <h5 class="logo_content">Remotely hiring the best tech talent</h5>
                 </div>
                 <div class="sponsor-row">
-                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="/images/hackerearth.svg"></a>
+                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="images/hackerearth.svg"></a>
                     <h5 class="logo_content">Remotely hiring the best tech talent</h5>
                 </div>
                 <div class="sponsor-row">
-                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="/images/hackerearth.svg"></a>
+                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="images/hackerearth.svg"></a>
                     <h5 class="logo_content">Remotely hiring the best tech talent</h5>
                 </div>
                 <div class=" sponsor-row">
-                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="/images/hackerearth.svg"></a>
+                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="images/hackerearth.svg"></a>
                     <h5 class="logo_content">Remotely hiring the best tech talent</h5>
                 </div>
             </div>
@@ -435,15 +435,15 @@
             <h1 class="underline" style="text-align:center;">Gold Sponsors</h1>
             <div class="gold-sponsors">
                 <div class="sponsor-row">
-                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="/images/hackerearth.svg"></a>
+                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="images/hackerearth.svg"></a>
                     <h5 class="logo_content">Remotely hiring the best tech talent</h5>
                 </div>
                 <div class="sponsor-row">
-                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="/images/hackerearth.svg"></a>
+                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="images/hackerearth.svg"></a>
                     <h5 class="logo_content">Remotely hiring the best tech talent</h5>
                 </div>
                 <div class="sponsor-row">
-                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="/images/hackerearth.svg"></a>
+                    <a href="https://www.hackerearth.com/"><img class="logo_alignment" src="images/hackerearth.svg"></a>
                     <h5 class="logo_content">Remotely hiring the best tech talent</h5>
                 </div>
             </div>
