--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <body>
 
-    <!-- <div id="preloader" class="preloader-bg">
+    <div id="preloader" class="preloader-bg">
         <div class="row h-100">
             <div class="my-auto col-12">
                 <div class="preloader-contant">
@@ -47,7 +47,7 @@
                 </div>
             </div>
         </div>
-    </div> -->
+    </div>
 
 
     <div class="navnmenu">
